--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,12 @@
   <b>Content:</b>
   <%= @post.content %>
 </p>
- 
+
+<p>
+  <b>Tags:</b>
+  <%= @post.tags.map { |t| t.name }.join(", ") %>
+</p>
+
 <h2>Comments</h2>
 <%= render @post.comments %>
  
