--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.hamltablecls {
+    $color: #ffffff;
+
+    background-color: $color;
+
+    
+    td {
+        color: darken($color, 50%);
+    }
+}
