tweaked login stuff

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -5,9 +5,13 @@
     $color: #ffffff;
 
     background-color: $color;
-
+    
     
     td {
         color: darken($color, 50%);
     }
+}
+
+.welcome {
+    text-align: right;
 }
