--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -5,7 +5,7 @@
       = yield :title
       \- Blog
     = stylesheet_link_tag    "application"
-    = javascript_include_tag "application", "foobar", :cache => true
+    = javascript_include_tag "application", :cache => true
     = csrf_meta_tags
   %body{:style => "background: #ccccff;"}
     - flash.each do |k, v|
