--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -14,7 +14,8 @@
     .welcome
       Welcome, 
       = current_user.email
-    
+      |
+      = link_to "Sign out", destroy_user_session_path
     = yield
     
     
