--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -22,3 +22,6 @@
           %td= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete
 %br/
 = link_to 'New Post', new_post_path
+%p
+  %input{:type => "button", :onclick => "window.location.href = '..'",
+         :value => "Home" }
